add context and list around recipe
add 2 paragraphs about backstory and ingredients

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,19 @@
 
 <body>
     <h1>lasagna</h1>
-</body>
+    <img src="../img/lasagna.jpg" alt="a delicious looking lasagna">
+    <h2> This is a delicacy you too can make in your <em>kitchen</em></h2>
+    <p>this dish was passed down from generation to generation in my family's bloodline. Not only is this dish savoury but also brings back memories from my childhood. The mincemeat, the stretchy cheese, the white sauce and the aroma permiating from this delicate block of perfection, reminds me of my granny's cooking.</p>
+    <P>When I was but a little boy my dad would always tell me, "go eat your breakfast you little girl", when indeed, I was clearly a boy. it was not a happy childhood but when gam-gam came over and made this delicious lasagna, my god did I wish I was eating that dish on a loop. All of a sudden, gam-gam died, and the recipe died with her. That is of course, before two weeks ago when I witha team of scientists were able to perfectly recreate this recipe and we now hand the power to you to do with this overwhelmingly deliciousmeal what you will. that bieng said, here's what you will need to make this <strong>BANGER:</strong></P>
+<   
+        <ul>
+            <li>a pinch of salt</li>
+            <li>"cheese(any type)"</li>
+            <li>mincemeat</li>
+            <li>1 litre of milk</li>
+            <li>2 eggs</li>
+            <li>a piece of Earth preferably coming from a mountain peak</li>
+
+        </ul>
+    </body>
 </html>
