--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body> 
     <h1><strong>Odin Recipes</strong></h1>
+    <a href="recipes/lasagna.html" noopener noreferer>lasagna</a>
+    
 </body>
 </html>
