add img of chef in index
moved lasagna link below image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body> 
     <h1><strong>Odin Recipes</strong></h1>
-    <a href="recipes/lasagna.html" noopener noreferer>lasagna</a>
+    <img src="img/chef.jpg">
+    <b>
+    <h3><a href="recipes/lasagna.html" noopener noreferer>lasagna</a></h3>
+    </b>
     
 </body>
 </html>
