Add two recipes and img chef-salad
bacon...eggs + chef-salad

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body> 
     <h1><strong>Odin Recipes</strong></h1>
-    <img src="img/chef.jpg">
+    <img src="img/chef.jpg" alt="a chef smiling in his kitchen">
     <b>
-    <h3><a href="recipes/lasagna.html" noopener noreferer>lasagna</a></h3>
-    </b>
-    
+    <ul>
+        <li><a href="recipes/lasagna.html" noopener noreferer>lasagna</a></li>
+        <li><a href="recipes/chef-salad" noopener noreferer>chef-salad</a></li>
+        <li><a href="recipes/bacon.and.eggs" noopener noreferer>bacon and eggs</a></li>
+    </ul>   
+        </b>
+
 </body>
 </html>
