--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <b>
     <ul>
         <li><a href="recipes/lasagna.html" noopener noreferer>lasagna</a></li>
-        <li><a href="recipes/chef-salad" noopener noreferer>chef-salad</a></li>
-        <li><a href="recipes/bacon.and.eggs" noopener noreferer>bacon and eggs</a></li>
+        <li><a href="recipes/chef-salad.html" noopener noreferer>chef-salad</a></li>
+        <li><a href="recipes/bacon.and.eggs.html" noopener noreferer>bacon and eggs</a></li>
     </ul>   
         </b>
 
