Add new recipe Change chef-salad img
added context to recipe. made webpage more beautiful. added new image as last one was wrong aspect ratio.

--- a/recipes/chef-salad.html
+++ b/recipes/chef-salad.html
@@ -6,6 +6,20 @@
     <title>chef-salad</title>
 </head>
 <body>
-    
+    <h1>CHEF-SALAD</h1>
+    <p>this delightful recipe will leave your mouth watery like a waterfall. Its origins are from way back when humans where herbivoes. So savory even the <EM>karens</EM> will be speechless.</p>
+    <img src="../img/Chef-Salad.jpg" alt="a beautiful dish that will make you tear. it containsd eggs, greens, salads, and various other foods perfect for Karens.">
+    <p><em><h3>beautiful isn't it? now let's take a look at how we can make something like this</p></em></h3>
+    <h2>What You'll Need:</h2>
+        <ul>
+            <li>1/2 EGGS</li>
+            <li>4 mini tomatoes</li>
+            <li>mini cheddar cheese</li>
+            <li>1/2 cucumber</li>
+            <li>handful of lettuce</li>
+            <li>1 whole chicken breast(hold the chicken;)</li>
+         </ul>
+     <p>Now that we have  everything we need, let's get to cooking. Start by searching for "chef-salad" on Google.</p>   
+
 </body>
 </html>
