Finish baconeggs recipe, add new baconeggs.img
started and finished baconandeggs recipe and added baconeggs recipe image

--- a/recipes/bacon.and.eggs.html
+++ b/recipes/bacon.and.eggs.html
@@ -6,6 +6,24 @@
     <title>Bacon and Eggs</title>
 </head>
 <body>
-    
+    <h1>The Legendary Bacon And Eggs</h1>
+    <p>I  don't even need to tell you how to do this one, go ask yo mama. Now just look at this image I stole from the internet to give you example of how this da<em>bussi</em> supposed to taste.</p>
+
+<img src="../img/baconandeggs.jpg" alt="bacon and eggs mate">
+<p>now that you've looked at it, go get:</p>
+<ul>
+    <li>eggs</li>
+    <em>go get:</em>
+    <li>bacon</li>
+</ul>
+    <P>and eat your health away. Hope this enough to satisfy TOP. CHAW;</P>
+
+
+
+
+
+
+
+
 </body>
 </html>
