--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title>Odin-Recipes</title>
 </head>
 <body> 
-    <h1><strong>Odin Recipes</strong></h1>
-    <img src="img/chef.jpg" alt="a chef smiling in his kitchen">
-    <b>
-    <ul>
-        <li><a href="recipes/lasagna.html" noopener noreferer>lasagna</a></li>
-        <li><a href="recipes/chef-salad.html" noopener noreferer>chef-salad</a></li>
-        <li><a href="recipes/bacon.and.eggs.html" noopener noreferer>bacon and eggs</a></li>
-    </ul>   
-        </b>
+    <h1><strong>ODIN RECIPES</strong></h1>
+
+    <img class="chefboy" src="img/chef.jpg" alt="a chef smiling in his kitchen">
+
+    <div class="recipe-links">
+        <button class="links"><a href="recipes/lasagna.html" noopener noreferer><div class="lasagna">lasagna</div></a></button>
+        <button class="links" ><a href="recipes/chef-salad.html" noopener noreferer>chef-salad</a></button>
+        <button class="links"><a href="recipes/bacon.and.eggs.html" noopener noreferer>bacon and eggs</a></button>
+    
+
 
 </body>
 </html>
