make recipe home better

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
-    <title>Odin-Recipes</title>
+    <title>Odin Recipes</title>
 </head>
 <body> 
-    <h1><strong>ODIN RECIPES</strong></h1>
+    <h1><strong><button class="homeheader"><a href="index.html"><div class="header">ODIN RECIPES</div></a></button></strong></h1>
 
     <img class="chefboy" src="img/chef.jpg" alt="a chef smiling in his kitchen">
 
     <div class="recipe-links">
-        <button class="links"><a href="recipes/lasagna.html" noopener noreferer><div class="lasagna">lasagna</div></a></button>
-        <button class="links" ><a href="recipes/chef-salad.html" noopener noreferer>chef-salad</a></button>
-        <button class="links"><a href="recipes/bacon.and.eggs.html" noopener noreferer>bacon and eggs</a></button>
+        <button class="links"><a href="recipes/lasagna.html" noopener noreferer><div class="linksinbutton">lasagna</div></a></button>
+        <button class="links" ><a href="recipes/chef-salad.html" noopener noreferer><div class="linksinbutton">chef-salad</div></a></button>
+        <button class="links"><a href="recipes/bacon.and.eggs.html" noopener noreferer><div class="linksinbutton">bacon and eggs</div></a></button>
     
 
 
