modify odin-recipes Homepage

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <img class="chefboy" src="img/chef.jpg" alt="a chef smiling in his kitchen">
 
     <div class="recipe-links">
-        <button class="links"><a href="recipes/lasagna.html" noopener noreferer><div class="linksinbutton">lasagna</div></a></button>
-        <button class="links" ><a href="recipes/chef-salad.html" noopener noreferer><div class="linksinbutton">chef-salad</div></a></button>
-        <button class="links"><a href="recipes/bacon.and.eggs.html" noopener noreferer><div class="linksinbutton">bacon and eggs</div></a></button>
+        <a href="recipes/lasagna.html" button class="links">lasagna</a></button>
+        <a href="recipes/chef-salad.html" button class="links">chef-salad</a></button>
+        <a href="recipes/bacon.and.eggs.html" button class="links">bacon and eggs</a></button>
     
 
 
