--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <title>Odin Recipes</title>
 </head>
 <body> 
-    <h1><strong><button class="homeheader"><a href="index.html"><div class="header">ODIN RECIPES</div></a></button></strong></h1>
-
+  <div class="card">  
+  <h1 class="header">ODIN RECIPES</a></h1>
+    <p class="warning">WARNING! Not ony are these recipes so delicious and therefore cause you to want more, some of them are poisionous and should be cooked with caution</p>
     <img class="chefboy" src="img/chef.jpg" alt="a chef smiling in his kitchen">
 
     <div class="recipe-links">
         <a href="recipes/lasagna.html" button class="links">lasagna</a></button>
         <a href="recipes/chef-salad.html" button class="links">chef-salad</a></button>
         <a href="recipes/bacon.and.eggs.html" button class="links">bacon and eggs</a></button>
+    </div>
+</div>
     
 
 
