--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Odin Recipes</title>
 </head>
 <body> 
-  <div class="card">  
-  <h1 class="header">ODIN RECIPES</a></h1>
+    <img class="banner" src="img/homepage banner.jpg" alt="a chef smiling in his kitchen">
+    <div class="card">  
+    <h1 class="header">ODIN RECIPES</a></h1>
     <p class="warning">WARNING! Not ony are these recipes so delicious and therefore cause you to want more, some of them are poisionous and should be cooked with caution</p>
-    <img class="chefboy" src="img/chef.jpg" alt="a chef smiling in his kitchen">
+    
 
     <div class="recipe-links">
         <a href="recipes/lasagna.html" button class="links">lasagna</a></button>
